--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "server": "nodemon server.js --ignore tests",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
     "body-parser": "~1.8.1",
@@ -16,5 +19,8 @@
     "nodemon": "^2.0.7",
     "serve-favicon": "~2.1.3",
     "winston": "^0.8.3"
+  },
+  "devDependencies": {
+    "concurrently": "^6.2.0"
   }
 }
