--- a/package.json
+++ b/package.json
@@ -3,24 +3,25 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon server.js",
     "server": "nodemon server.js --ignore tests",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
-    "body-parser": "~1.8.1",
-    "cookie-parser": "~1.3.3",
     "cors": "^2.8.5",
-    "debug": "~2.0.0",
-    "express": "~4.9.0",
-    "express-winston": "^0.2.9",
-    "lodash": "^2.4.1",
-    "nodemon": "^2.0.7",
-    "serve-favicon": "~2.1.3",
-    "winston": "^0.8.3"
+    "debug": "^4.3.2",
+    "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
+    "express-bunyan-logger": "^1.3.3",
+    "express-winston": "^4.2.0",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.0.4",
+    "nodemon": "^2.0.12",
+    "npm-check-updates": "^11.8.5",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
-    "concurrently": "^6.2.0"
+    "concurrently": "^6.2.1"
   }
 }
